# Reversi

./: .gitignore  README.md
src/client/: CMakeLists.txt  a.out  client_config.txt  makefile
src/client/include/: AI.h  Board.h  BoardScanner.h  Cell.h  Client.h  ColorEnum.h  ConvertString.h  FileReader.h  Flip.h  Game.h  GameManager.h  Human.h  OnlineOpponent.h  Player.h  Point.h
src/client/src/: AI.cpp  Board.cpp  BoardScanner.cpp  Cell.cpp  Client.cpp  ConvertString.cpp  FileReader.cpp  Flip.cpp  Game.cpp  GameManager.cpp  Human.cpp  OnlineOpponent.cpp  Player.cpp  Point.cpp  client_config.txt  main.cpp
src/client/tests/: AI_Test.cpp  BoardScannerTest.cpp  BoardTest.cpp  CellTest.cpp  ConvertStringTest.cpp  FlipTest.cpp  HumanTest.cpp  PointTest.cpp  TestMain.cpp
src/server/: CMakeLists.txt  a.out  makefile  server_config.txt
src/server/include/: ClientHandler.h  Command.h  CommandsManager.h  ConverString.h  FileReader.h  JoinCommand.h  ListCommand.h  PlayCommand.h  PlayGame.h  Server.h  StartCommand.h  Task.h  ThreadPool.h
src/server/src/: ClientHandler.cpp  CommandsManager.cpp  ConverString.cpp  FileReader.cpp  GameData.cpp  GameData.h  JoinCommand.cpp  ListCommand.cpp  PlayCommand.cpp  PlayGame.cpp  Server.cpp  StartCommand.cpp  ThreadPool.cpp  main.cpp  server_config.txt
